# digitdecider

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
digitdecider/: __init__.py  digitdecider.py
static/: index.html
