[project]
name = "digitdecider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "packaging>=24.0",
    "pillow>=11.0",
    "python-multipart>=0.0.20",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.30",
]
